# SPL3

./: CMakeLists.txt
Client/: makefile
Client/include/: connectionHandler.h
Client/src/: BGSclient.cpp  connectionHandler.cpp  test.cpp
Server/: pom.xml
Server/src/main/java/bgu/spl/net/api/bidi/: messagingProtocolImp.java
Server/src/main/java/bgu/spl/net/impl/BGSServer/: TPCMain.java
Server/src/main/java/bgu/spl/net/srv/: BaseServer.java  BlockingConnectionHandler.java  ConnectionHandler.java  DataBase.java  Reactor.java  TestDataBase.java
spl-net/src/main/java/bgu/spl/net/: Program.java
spl-net/src/main/java/bgu/spl/net/api/bidi/: ConnectionsImpl.java  MessageEncoderDecoderImp.java  messagingProtocolImp.java
spl-net/src/main/java/bgu/spl/net/impl/BGSServer/: ReactorMain.java  TPCMain.java
spl-net/src/main/java/bgu/spl/net/impl/newsfeed/: NewsFeedServerMain.java
spl-net/src/main/java/bgu/spl/net/srv/: BaseServer.java  BlockingConnectionHandler.java  DataBase.java  NonBlockingConnectionHandler.java  PersonalMessage.java  Post.java  Reactor.java  Server.java  User.java  Xavi.java
